<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dataDetail"
            type="com.bootcamp.lutfi_mealdb.model.MealsDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_f5f5f5"
        tools:context=".ui.DetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:id="@+id/meal_detail_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_detail_meal"
                    loadImageFromUrl="@{dataDetail.meals[0].strMealThumb}"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/meal_detail_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/img_placeholder" />

                <RelativeLayout
                    android:padding="15dp"
                    android:background="@color/c_f5f5f5"
                    android:layout_width="match_parent"
                    android:elevation="5dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/meal_name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_bold"
                        android:text="@{dataDetail.meals[0].strMeal}"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:lineHeight="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        tools:text="@string/meal_name" />

                    <ImageView
                        android:id="@+id/fav_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/fav"
                        android:src="@drawable/fav"
                        android:background="@drawable/fav"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{dataDetail.meals[0].strArea}"
                    android:textColor="@color/c_494949"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:background="@color/c_ffd24c"
                    android:fontFamily="@font/roboto_italic"
                    tools:text="@string/example" />

                <TextView
                    android:id="@+id/intruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/instruction"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    />

                <TextView
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="15dp"
                    android:justificationMode="inter_word"
                    android:text="@{dataDetail.meals[0].strInstructions}"
                    android:textColor="@color/c_494949"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"
                    tools:text="@string/example" />

                <Button
                    android:id="@+id/play"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:text="Watch"
                    android:tag="@{dataDetail.meals[0].strYoutube}"
                    android:fontFamily="@font/roboto"
                    android:backgroundTint="@color/c_ffd24c"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/warning"
            android:src="@drawable/warning"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"
            app:tint="@color/c_ffd24c" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/failed_to_fetch_data"
            android:textAlignment="center"
            android:textColor="@color/c_ffd24c"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_icon"
            app:layout_constraintVertical_bias="0" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
